--- a/config/database.yml
+++ b/config/database.yml
@@ -13,19 +13,23 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: rails
-  password: 'kq0gzxqzvR'
+  username: root
+  password: 'root'
+  socket: /var/run/mysqld/mysqld.sock
   database: riviera
-  host: localhost
+  host: 127.0.0.1
+  port: 8889
 
 development:
   <<: *default
+  database: riviera_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: riviera_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -48,5 +52,6 @@ test:
 #
 production:
   <<: *default
-  username: project2
-  password: <%= ENV['PROJECT2_DATABASE_PASSWORD'] %>
+  database: riviera_production
+  username: riviera
+  password: <%= ENV['RIVIERA_DATABASE_PASSWORD'] %>
